# tinythis

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: confirm.rs  error.rs  main.rs  options.rs  paths.rs  prefs.rs
src/assets/: ffmpeg.rs
src/cli/: args.rs  cmd_setup.rs  cmd_setup_path.rs  cmd_uninstall.rs  cmd_update.rs  mod.rs  positional.rs
src/exec/: compress.rs  input.rs  mod.rs
src/presets/: mod.rs
src/process/: run.rs
src/self_install/: mod.rs
src/tui/: app.rs  mod.rs  terminal.rs  ui.rs
src/update/: mod.rs
tests/: vmaf.rs
