[package]
name = "tinythis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
fs2 = "0.4.3"
indicatif = "0.18.3"
ratatui = "0.30.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.14.1"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.1"
tempfile = "3.15.0"
thiserror = "2.0.11"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
