[package]
name = "tinythis"
version = "0.0.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
fs2 = "0.4.3"
indicatif = "0.18.3"
ratatui = "0.30.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.14.1"
self_update = { version = "0.42.0", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }
spinners = "4.1.1"
tempfile = "3.15.0"
thiserror = "2.0.11"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[dev-dependencies]
serde_json = "1.0.139"
